--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,9 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - alsa-lib=1.2.10=hd590300_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
   - attr=2.5.1=h166bdaf_1
+  - attrs=23.2.0=pyh71513ae_0
   - brotli=1.1.0=hd590300_1
   - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py310hc6cd4ac_1
@@ -15,9 +17,14 @@ dependencies:
   - cairo=1.18.0=h3faef2a_0
   - certifi=2024.2.2=pyhd8ed1ab_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
+  - comm=0.2.1=pyhd8ed1ab_0
   - contourpy=1.2.0=py310hd41b1e2_0
   - cycler=0.12.1=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
+  - debugpy=1.8.1=py310hc6cd4ac_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
   - expat=2.5.0=hcb278e6_1
   - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
   - font-ttf-inconsolata=3.000=h77eed37_0
@@ -37,7 +44,17 @@ dependencies:
   - harfbuzz=8.3.0=h3d44ed6_0
   - icu=73.2=h59595ed_0
   - idna=3.6=pyhd8ed1ab_0
+  - importlib-metadata=7.0.1=pyha770c72_0
+  - importlib_metadata=7.0.1=hd8ed1ab_0
+  - importlib_resources=6.1.1=pyhd8ed1ab_0
+  - ipykernel=6.29.2=pyhd33586a_0
+  - ipython=8.22.0=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
   - joblib=1.3.2=pyhd8ed1ab_0
+  - jsonschema=4.21.1=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.0=pyhd8ed1ab_0
+  - jupyter_core=5.7.1=py310hff52083_0
   - keyutils=1.6.1=h166bdaf_0
   - kiwisolver=1.4.5=py310hd41b1e2_1
   - krb5=1.21.2=h659d440_0
@@ -78,6 +95,7 @@ dependencies:
   - libpng=1.6.42=h2797004_0
   - libpq=16.2=h33b98f1_0
   - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.45.1=h2797004_0
   - libstdcxx-ng=13.2.0=h7e041cc_5
   - libsystemd0=255=h3516f8a_0
@@ -93,13 +111,16 @@ dependencies:
   - lz4-c=1.9.4=hcb278e6_0
   - matplotlib=3.8.3=py310hff52083_0
   - matplotlib-base=3.8.3=py310h62c0568_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mpg123=1.32.4=h59595ed_0
   - multipledispatch=0.6.0=py_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.0.33=hf1915f5_6
   - mysql-libs=8.0.33=hca2cd23_6
   - natsort=8.4.0=pyhd8ed1ab_0
+  - nbformat=5.9.2=pyhd8ed1ab_0
   - ncurses=6.4=h59595ed_2
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - nspr=4.35=h27087fc_0
   - nss=3.98=h1d7d5a4_0
   - numpy=1.26.4=py310hb13e2d6_0
@@ -109,14 +130,24 @@ dependencies:
   - pandas=2.2.0=py310hcc13569_0
   - pandas-flavor=0.6.0=pyhd8ed1ab_1
   - pandas_flavor=0.6.0=hd8ed1ab_1
+  - parso=0.8.3=pyhd8ed1ab_0
   - patsy=0.5.6=pyhd8ed1ab_0
   - pcre2=10.42=hcad00b1_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
   - pillow=10.2.0=py310h01dd4db_0
   - pip=24.0=pyhd8ed1ab_0
   - pixman=0.43.2=h59595ed_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - platformdirs=4.2.0=pyhd8ed1ab_0
   - ply=3.11=py_1
+  - prompt-toolkit=3.0.42=pyha770c72_0
+  - psutil=5.9.8=py310h2372a71_0
   - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
   - pulseaudio-client=16.1=hb77b528_5
+  - pure_eval=0.2.2=pyhd8ed1ab_0
+  - pygments=2.17.2=pyhd8ed1ab_0
   - pyjanitor=0.26.0=pyhd8ed1ab_0
   - pyparsing=3.1.1=pyhd8ed1ab_0
   - pyqt=5.15.9=py310h04931ad_5
@@ -124,12 +155,16 @@ dependencies:
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.10.13=hd12c33a_1_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python-fastjsonschema=2.19.1=pyhd8ed1ab_0
   - python-tzdata=2024.1=pyhd8ed1ab_0
   - python_abi=3.10=4_cp310
   - pytz=2024.1=pyhd8ed1ab_0
+  - pyzmq=25.1.2=py310h795f18f_0
   - qt-main=5.15.8=h5810be5_19
   - readline=8.2=h8228510_1
+  - referencing=0.33.0=pyhd8ed1ab_0
   - requests=2.31.0=pyhd8ed1ab_0
+  - rpds-py=0.18.0=py310hcb5633a_0
   - scikit-learn=1.4.1.post1=py310h1fdf081_0
   - scipy=1.12.0=py310hb13e2d6_2
   - seaborn=0.13.2=hd8ed1ab_0
@@ -137,15 +172,19 @@ dependencies:
   - setuptools=69.1.0=pyhd8ed1ab_1
   - sip=6.7.12=py310hc6cd4ac_0
   - six=1.16.0=pyh6c4a22f_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
   - statsmodels=0.14.1=py310h1f7b6fc_0
   - threadpoolctl=3.3.0=pyhc1e730c_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
   - tomli=2.0.1=pyhd8ed1ab_0
   - tornado=6.4=py310h2372a71_0
+  - traitlets=5.14.1=pyhd8ed1ab_0
+  - typing_extensions=4.9.0=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
   - unicodedata2=15.1.0=py310h2372a71_0
   - urllib3=2.2.1=pyhd8ed1ab_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - xarray=2024.2.0=pyhd8ed1ab_0
   - xcb-util=0.4.0=hd590300_1
@@ -168,6 +207,8 @@ dependencies:
   - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h59595ed_0
+  - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
 prefix: /home/juanb3ltran/anaconda3/envs/stars
